--- a/app/src/main/res/layout/activity_sign_up_as_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_as_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background = "@color/mainBgColour"
-    tools:context=".SignUpAsPage">
+    tools:context=".GeneralModule.SignUpAsPage">
 
     <TextView
         android:id="@+id/textView13"
