--- a/app/src/main/res/layout/activity_user_landing_page.xml
+++ b/app/src/main/res/layout/activity_user_landing_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserLandingPage">
+    tools:context=".GeneralModule.UserLandingPage">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
