--- a/app/src/main/res/layout/m2_activity_chat_wus.xml
+++ b/app/src/main/res/layout/m2_activity_chat_wus.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Confession">
+    tools:context=".Activity.M2_ChatWUs">
 
     <View
         android:id="@+id/UpperPanel"
@@ -28,7 +28,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="62dp"
         android:layout_marginTop="8dp"
-        android:text="Confessions"
+        android:text="Chat With Us"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -44,6 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
+
 <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
 <!--        android:id="@+id/UpperPanel"-->
 <!--        android:layout_width="414dp"-->
@@ -56,28 +57,26 @@
 <!--        app:layout_constraintTop_toTopOf="parent"-->
 <!--        app:layout_constraintVertical_bias="0.0">-->
 
-<!--        -->
 <!--        <TextView-->
-<!--            android:id="@+id/TVConfessions"-->
-<!--            android:layout_width="334dp"-->
-<!--            android:layout_height="37dp"-->
-<!--            android:text="Confessions"-->
+<!--            android:id="@+id/TVChat"-->
+<!--            android:layout_width="338dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:text="Chat With Us"-->
 <!--            android:textSize="24sp"-->
 <!--            app:layout_constraintBottom_toBottomOf="parent"-->
 <!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.75"-->
+<!--            app:layout_constraintHorizontal_bias="0.789"-->
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintVertical_bias="0.409" />-->
+<!--            app:layout_constraintVertical_bias="0.578" />-->
 
 <!--        <ImageButton-->
 <!--            android:id="@+id/BackButton"-->
 <!--            android:layout_width="48dp"-->
 <!--            android:layout_height="48dp"-->
-<!--            android:backgroundTint="@android:color/transparent"-->
-<!--            android:contentDescription="Back Arrow"-->
+<!--            android:background="@android:color/transparent"-->
 <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/TVConfessions"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/TVChat"-->
 <!--            app:layout_constraintHorizontal_bias="0.034"-->
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toTopOf="parent"-->
@@ -86,70 +85,24 @@
 
 <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    <ImageButton
-        android:id="@+id/ButtonAttach"
-        android:layout_width="64dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_attachimage"
-        app:layout_constraintStart_toEndOf="@+id/ETPost"
-        app:layout_constraintTop_toBottomOf="@+id/UpperPanel" />
-
     <EditText
-        android:id="@+id/ETPost"
-        android:layout_width="180dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="4dp"
-        android:background="#ECECEC"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="\n   Have anything to post?"
-        android:inputType="textMultiLine"
-        android:textSize="15sp"
+        android:id="@+id/ETSearch"
+        android:layout_width="343dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/text_box_edit"
+        android:drawableStart="@drawable/ic_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/UpperPanel" />
-
-    <ImageButton
-        android:id="@+id/ButtonSubmit"
-        android:layout_width="64dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        android:backgroundTint="@android:color/transparent"
-        app:layout_constraintEnd_toStartOf="@+id/ETPost"
-        app:layout_constraintTop_toBottomOf="@+id/UpperPanel"
-        app:srcCompat="@drawable/ic_add" />
-
-    <ImageView
-        android:id="@+id/IVPost"
-        android:layout_width="364dp"
-        android:layout_height="175dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ETPost" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="380dp"
-        android:layout_height="28dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="184dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ETPost" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="404dp"
-        android:layout_height="371dp"
+        android:id="@+id/chatRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/ETSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
